CCMS > Monitor naming updates

--- a/source/cloud-compliance/index.html.slim
+++ b/source/cloud-compliance/index.html.slim
@@ -64,7 +64,7 @@ section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad
           / .subhead--spaced 
           h3.headline-4 Datica Monitor
           p.strip.strip-small.strip-ccms
-          p.lead Know the precise compliance state of your cloud environments
+          p.lead Know the precise compliance state of your cloud services
           / p Datica Cloud Compliance Management System is the first-ever tool to guarantee compliance assurance of managed cloud-native services. Our dashboard and reports enable you to continuously monitor compliance, react quickly to risks and incidents, and attest to compliance for audits.
         .card-divider.card-divider--flush
           = partial "partials/snippets/button", :locals => { :label => "Learn more about Datica Monitor", :url => "/monitor/", :button_classes => "button button--light button-inline", :data_track_group => "compliance", :item_id => "get-ccms", :icon => "icon-angle-right", :icon_align => "right" }
