Redirects (retiring blog posts)

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Datica brings the cloud to healthcare"
-summary: "Datica and Sansoro Health merge to help accelerate healthcare’s data-driven future in the cloud."
+summary: "Datica solves the tough challenges of working with health data, with compliance and integration solutions."
 author: "Datica, Inc."
 tags: "compliance, HITRUST, integration, EHR, healthcare, education, HIPAA, HL7, FHIR, interoperability"
 customCSS: "home"
