Home masthead design updates. Less is more

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,5 +1,5 @@
 ---
-title: "Datica brings the cloud to healthcare"
+title: "Datica brings the cloud to healthcare."
 summary: "Datica solves the tough challenges of working with health data, with compliance and integration solutions."
 author: "Datica, Inc."
 tags: "compliance, HITRUST, integration, EHR, healthcare, education, HIPAA, HL7, FHIR, interoperability"
@@ -67,13 +67,13 @@ section.masthead.bg-light.container-color--light-grad.relative id="masthead"
   .section-article.relative.z-10
     .row.align-center
       .columns.small-12.large-10.xlarge-9
-        svg.group id="datica-logo-desktop" width="230" height="96"
+        /svg.group id="datica-logo-desktop" width="230" height="96"
           use.symbol-icon xlink:href="#datica-logo-horiz" href="#datica-logo-horiz"
-        h1.headline-1.text-light.margin-bottom-small We bring the cloud to healthcare.
+        h1.headline-1.text-light.margin-bottom-small Datica brings the cloud to healthcare
         p.lead.group Developing healthcare applications in the cloud requires <strong>data integration and compliance</strong> with complicated rules and controls. Datica has a family of powerful, single-source solutions to those challenges.
         .row.align-center.small-up-1.medium-up-2
           = partial "partials/snippets/product-list-alt.slim", :locals => { :size => "large", :style => "dark", :category_links => true }
-        .waypoint
+        / .waypoint
           h4.headline-5.spaced-out Learn More
           a.pulse href="#case-studies" title="Learn More"
             = inline_svg("icon-angle-down-large", class: "icon-size--large waypoint-icon")
