Homepage - trying center-aligned layout

--- a/source/partials/snippets/_product-list-alt.slim
+++ b/source/partials/snippets/_product-list-alt.slim
@@ -23,8 +23,8 @@ ruby:
   # if defined?(desc) && desc == true
   # else
   # end
-  cat_compliance = '<h3 class="text-light group headline-4"><span class="text-bold headline-3">Cloud Compliance</span><br>with patient data in the cloud</h3>'
-  cat_integration = '<h3 class="text-light group headline-4"><span class="text-bold headline-3">Integrate</span><br>with patient data from anywhere</h3>'
+  cat_compliance = '<h3 class="text-light text-center group headline-4"><span class="text-bold headline-3">Cloud Compliance</span><br>with patient data in the cloud</h3>'
+  cat_integration = '<h3 class="text-light text-center group headline-4"><span class="text-bold headline-3">Integrate</span><br>with patient data from anywhere</h3>'
   if defined?(category_links) && category_links == true
     category_links = true
   else
