--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -63,14 +63,16 @@ scss:
 section#top.bg-gray-1
   = partial "partials/head/header", :locals => { :style => "light" }
   
-section.masthead.bg-light.container-color--light-grad.relative id="masthead"
-  .section-article.relative.z-10
+section.masthead.bg-light.container-color--light-grad id="masthead"
+  .section-article.container-image--fixed.lozad data-background-image="/public/icons/inlined/network-dots-white.svg"
     .row.align-center
-      .columns.small-12.large-10.xlarge-9
+      .columns.small-12.large-10.xlarge-8.text-center
         /svg.group id="datica-logo-desktop" width="230" height="96"
           use.symbol-icon xlink:href="#datica-logo-horiz" href="#datica-logo-horiz"
         h1.headline-1.text-light.margin-bottom-small Datica brings the cloud to healthcare
-        p.lead.group Developing healthcare applications in the cloud requires <strong>data integration and compliance</strong> with complicated rules and controls. Datica has a family of powerful, single-source solutions to those challenges.
+        p.lead.group.margin-auto Developing healthcare applications in the cloud requires <strong>data integration and compliance</strong> with complicated rules and controls. Datica has a family of powerful, single-source solutions to those challenges.
+    .row.align-center
+      .columns.small-12.large-10.xlarge-8
         .row.align-center.small-up-1.medium-up-2
           = partial "partials/snippets/product-list-alt.slim", :locals => { :size => "large", :style => "dark", :category_links => true }
         / .waypoint
@@ -78,7 +80,7 @@ section.masthead.bg-light.container-color--light-grad.relative id="masthead"
           a.pulse href="#case-studies" title="Learn More"
             = inline_svg("icon-angle-down-large", class: "icon-size--large waypoint-icon")
 
-  .art
+  /.art
     /= inline_svg("network-color-grad", class: "z-5 art-accent step-2 img-mix-overlay")
     / .z-0.art-bg-fill.container-image-fill.lozad.step-1 data-background-image=bg_masthead
     img.z-5.art-accent.step-2.img-mix-overlay.lozad data-src="/public/icons/inlined/network-dots-white.svg"
@@ -128,7 +130,7 @@ section.section-article#compliance
 = partial "/partials/section-promos/podcast"
 section.section-article.bg-white#recent
   = partial "partials/content/recent-items"
-section.section-article.bg-gray-12.drop-inset--v#education
+section.section-article.bg-gray-12.drop-inset--v.container-image--fixed.lozad#education data-background-image="/public/icons/inlined/network-dots-white.svg"
   .row.align-center
     .columns.small-12.large-6
       h2.headline-3.text-center <strong>Grow</strong> with us
