Minor home, podcast tweaks
optimizing different images for first load. Tweaks for other active states.

--- a/source/assets/scss/modules/cards.scss
+++ b/source/assets/scss/modules/cards.scss
@@ -147,7 +147,7 @@
         transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
     }
 
-    &:hover {
+    &:hover, &:active, &:focus {
         transform: scale3D(1.03, 1.03, 1.03);
         &::after {
             opacity: 1;
