--- a/source/partials/section-promos/_podcast.slim
+++ b/source/partials/section-promos/_podcast.slim
@@ -2,9 +2,9 @@
 scss:
   #podcast { // a few tweaks
     background-blend-mode: luminosity;
-    background-size: 140%;
+    background-size: 105%;
   }
-section#podcast.lozad.section-article.bg-gray-2.container-image--middle data-background-image="https://images.ctfassets.net/189dvqdsjh46/19d5iulqaYg8ACWcYQ6Im6/3f883ec8f77add5b22a497e3b3d63e6d/art-sound-bars-purple.svg"
+section#podcast.lozad.section-article.bg-gray-2.container-image--top data-background-image="https://images.ctfassets.net/189dvqdsjh46/19d5iulqaYg8ACWcYQ6Im6/3f883ec8f77add5b22a497e3b3d63e6d/art-sound-bars-purple.svg"
   .row.align-center.group
     .columns
       h3.headline-3.text-light.group.text-center
