--- a/source/partials/snippets/_product-list-alt.slim
+++ b/source/partials/snippets/_product-list-alt.slim
@@ -39,7 +39,7 @@ scss:
     transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
   }
   .product-card {
-    &:hover {
+    &:hover, &:active, &:focus {
       color: white;
       .product-icon {
         transform: scale3D(1.06, 1.06, 1.06);
