Some homepage updates, minor component updates
Note that links in partials on home are in home.css

--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -104,7 +104,7 @@ $gray-8:  hsl(31, 1%, 66%);
 $gray-9:  hsl(31, 1%, 75%);
 $gray-10: hsl(31, 1%, 86%);
 $gray-11: hsl(31, 1%, 91%);
-$gray-12: hsl(31, 1%, 95);
+$gray-12: hsl(31, 1%, 95%);
 
 // for color functions
 $gray-list: (
