--- a/source/assets/scss/mixins/colors.scss
+++ b/source/assets/scss/mixins/colors.scss
@@ -41,7 +41,7 @@
 @mixin color--white-to-gray-light {
     background-color: $gray-12;
     color: black;
-    background: linear-gradient(215deg, #ced9d9 6%, #FFFFFF 68%);
+    background: linear-gradient(215deg, $gray-10 6%, #FFFFFF 68%);
     // background: linear-gradient(-45deg, $white 0%, $gray-11 100%);
 }
 @mixin color--gray-dark {
@@ -52,7 +52,7 @@
 @mixin color--gray-dark-grad {
     background-color: #2C2A2A;
     // background: linear-gradient(to top, $color_deep-alt 0%, adjust-color($color_deep-alt, $lightness: 10%) 100%);
-    @include gradient(180deg, #2C2A2A 0%, #959595 100%);
+    @include gradient(160deg, $gray-1 0%, $gray-6 100%);
     color: $color_white;
 }
 
