--- a/source/partials/content/_recent-items.slim
+++ b/source/partials/content/_recent-items.slim
@@ -9,7 +9,7 @@ ruby:
   h3.headline-3 <strong>Recently</strong> at Datica
 .row.full-width.align-center.align-middle.small-up-1.medium-up-2.large-up-3.xlarge-up-4
   - sorted_guides.take(1).each do | id, guide_entry |
-    .column.hide-for-large.hide-for-xlarge
+    .column
       = partial "partials/cards/card-report", :locals => { :post => guide_entry, :style => "dark", :size => "small" }
   - sorted_posts.take(1).each do | id, blog_entry |
     .column
@@ -17,9 +17,10 @@ ruby:
   - sorted_webinars.take(1).each do | id, webinar_entry |
     .column
       = partial "partials/cards/webinar-poster", :locals => { :entry => webinar_entry, :card_style => "vertical" }
-  - sorted_podcasts.take(1).each do | id, podcast_entry |
-    .column.hide-for-large-only
-      = partial "partials/cards/featured-blog", :locals => { :post => podcast_entry, :style => "light", :size => "small", :show_type => true }
+  - unless current_page.url == "/" # eg. not home page, where section-promo for podcast exists
+    - sorted_podcasts.take(1).each do | id, podcast_entry |
+      .column.hide-for-large-only
+        = partial "partials/cards/featured-blog", :locals => { :post => podcast_entry, :style => "light", :size => "small", :show_type => true }
   - sorted_reports.take(1).each do | id, report_entry |
     .column
       = partial "partials/cards/card-report", :locals => { :post => report_entry, :style => "dark", :size => "small" }
