Minor redirects addition

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -46,7 +46,7 @@ ruby:
   # featured_img = "https://images.ctfassets.net/189dvqdsjh46/62MYHqth60wmUosWQQ0es8/470d9a7b58ffede77ae3d064cf86b655/office_-_istockphoto-626637134_edit.jpg"
   bg_masthead = 'https://images.ctfassets.net/189dvqdsjh46/6QEH9ycbuFUOfjjKqaYkan/6bbcdb723241965d5675df3bb67285f8/bg-masthead-blur.svg'
   art_masthead = 
-  current_page.data.asset_preload = '<link href="' + bg_masthead + '" rel="preload" as="image" />'
+  current_page.data.asset_preload = '<link href="' + bg_masthead + '" rel="preload" as="image" /><link href="/public/css/products-mastheads.css" rel="preload" as="style" />'
   current_page.data.share_image = image_share_default
 
 scss:
