--- a/source/partials/content/_recent-items.slim
+++ b/source/partials/content/_recent-items.slim
@@ -10,7 +10,7 @@ ruby:
 .row.full-width.align-center.align-middle.small-up-1.medium-up-2.large-up-3.xlarge-up-4
   - sorted_guides.take(1).each do | id, guide_entry |
     .column
-      = partial "partials/cards/card-report", :locals => { :post => guide_entry, :style => "dark", :size => "small" }
+      = partial "partials/cards/card-guide-vert", :locals => { :entry => guide_entry, :style => "dark", :size => "small" }
   - sorted_posts.take(1).each do | id, blog_entry |
     .column
       = partial "partials/cards/featured-blog", :locals => { :post => blog_entry, :style => "light", :size => "small", :show_type => true }
@@ -23,7 +23,7 @@ ruby:
         = partial "partials/cards/featured-blog", :locals => { :post => podcast_entry, :style => "light", :size => "small", :show_type => true }
   - sorted_reports.take(1).each do | id, report_entry |
     .column
-      = partial "partials/cards/card-report", :locals => { :post => report_entry, :style => "dark", :size => "small" }
+      = partial "partials/cards/card-guide-vert", :locals => { :entry => report_entry, :style => "light", :size => "small" }
 
   / .column
   /   .card
